Final update - Image updated - Logo changed - Title changed - Social Media's changed

--- a/src/app/container/about/about.component.html
+++ b/src/app/container/about/about.component.html
@@ -1,4 +1,4 @@
 <div class="col2">
 <h1>About:</h1>
-<p>Some of the Social Media navigated in this web. There are <b>Facebook</b>, <b>LinkedIn</b>, <b>Twitter</b>. It's easily to go do your social media's. At the same time you can easily go toset <b>News</b> and <b>Search Engine</b> also.</p>
+<p>Some of the Social Media navigated in this web. There are <b>Facebook</b>, <b>LinkedIn</b>, <b>Twitter</b> and <b>Instagram</b>. It's easily go to your social media's. At the same time you can easily go to find <b>Search Engine</b> also.</p>
 </div>
