--- a/src/app/container/user/medias/medias.component.html
+++ b/src/app/container/user/medias/medias.component.html
@@ -3,7 +3,7 @@
   <div class="f1_card">
     <div class="front face">
       <p class="label1">
-        <img ng-src="Assets/3.jpg" alt="Social" />
+        <img src="../../../assets/3.jpg" alt="Social" />
       </p>
     </div>
     <div class="back face center">
@@ -17,7 +17,7 @@
   <div class="f1_card">
     <div class="front face">
       <p class="label1">
-        <img ng-src="Assets/5.jpg" alt="Social" />
+        <img src="../../../assets/5.jpg" alt="Social" />
       </p>
     </div>
     <div class="back face center">
@@ -31,7 +31,7 @@
   <div class="f1_card">
     <div class="front face">
       <p class="label1">
-        <img ng-src="Assets/4.jpg" alt="Social" />
+        <img src="../../../assets/4.jpg" alt="Social" />
       </p>
     </div>
     <div class="back face center">
@@ -45,12 +45,12 @@
   <div class="f1_card">
     <div class="front face">
       <p class="label1">
-        <img ng-src="Assets/6.jpg" alt="Social" />
+        <img src="../../../assets/1.jpg" alt="Social" />
       </p>
     </div>
     <div class="back face center">
       <p class="label">
-        <a href="http://www.quintpub.net">News</a>
+        <a href="https://www.instagram.com/">Instagram</a>
       </p>
     </div>
   </div>
@@ -59,7 +59,7 @@
   <div class="f1_card">
     <div class="front face">
       <p class="label2">
-        <span class="go">G</span>
+        <img src="../../../assets/2.png" alt="Social" />
       </p>
     </div>
     <div class="back face center">
