--- a/src/app/container/user/medias/medias.component.scss
+++ b/src/app/container/user/medias/medias.component.scss
@@ -64,12 +64,10 @@
         .label2
         {
         margin:auto;
-        padding:.6em 0em 0em 0em;
+        padding:0.3em 0em 0em 0em;
         font-size:400%;
         font-family:sans-serif;
         font-weight:bold;
-        color:#4285F4;
-        text-shadow:4px 3px 2px black;
         }
         .go
         {
